--- a/android/client/res/values/strings.xml
+++ b/android/client/res/values/strings.xml
@@ -354,5 +354,10 @@
     <string name="label_permission_access_service">Tweet Lanes service</string>
     <string name="label_backend_service">Tweet Lanes Notifications</string>
     <string name="select_account_type">What type of an account would you like to add?</string>
+    <string name="new_account_intro">Tweet Lanes supports two different social networks: Twitter
+        and App.net.</string>
+    <string name="new_account_intro2">To add an account, sign into one of the following services:</string>
+    <string name="new_account_twitter">Twitter</string>
+    <string name="new_account_adn">App.net</string>
 </resources>
 
