Impleted delete post for App.net, fixed issue where App.net posts wouldn't have favorite or repost icon. Closes #7.

--- a/android/client/res/values/strings.xml
+++ b/android/client/res/values/strings.xml
@@ -165,6 +165,8 @@
 
     <string name="functionality_not_implemented">Sorry, but this feature isn\'t ready just yet. It\'s coming very soon though, I promise!</string>
     <string name="deleted_successfully">Status deleted successfully</string>
+    <string name="favorited_successfully">Favorited successfully</string>
+    <string name="unfavorited_successfully">Unfavorited successfully</string>
 
     <string name="retweet">Retweet</string>
     <string name="quote">Quote</string>
