--- a/android/client/res/values/strings.xml
+++ b/android/client/res/values/strings.xml
@@ -321,6 +321,13 @@
     <string name="title_version_preference">Tweet Lanes version</string>
     <string name="summary_version_preference"></string>
 
+    <string name="notification_preferences">Notifications</string>
+
+    <string name="show_notifications_preference">Enable Notifications</string>
+    <string name="summary_show_notifications_preference">Display notifications when you get new mentions</string>
+
+    <string name="ringtone_preference">Ringtone</string>
+
 	<string name="settings_never">Never</string>
 	<string name="settings_always">Always</string>
 	<string name="settings_wifi">Wifi only</string>
