--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -438,7 +438,7 @@
     <string name="summary_version_preference"></string>
 
     <string name="title_help_preference">Where To Get Help?</string>
-    <string name="summary_help_preference">Send us a tweet or app.net message. - We can be found @TweetLanes on both networks.</string>
+    <string name="summary_help_preference">Send us a tweet or App.net message. - We can be found @TweetLanes on both networks.</string>
 
     <string name="notification_preferences">Notifications</string>
 
