--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -33,7 +33,7 @@
             ViewPagerIndicator</a>, Copyright 2012 Jake Wharton.\n
     </string>
     <string name="credits_art_items">Logo and promotional images created by
-        <a href="https://plus.google.com/107629610345558527193/posts">Bruno Rime</a>. Used with
+        <a href="https://plus.google.com/107629610345558527193/posts">Bruno Rime</a> and @retareq. Used with
         permission.
     </string>
     <string name="credits_app_copyright">Copyright 2013, Chris Lacy.</string>
