Added fix for #169 when checking for media links, ensure case is lower.  When pulling the code of the link out, maintain original case.

--- a/android/libraries/TweetLanesCore/res/raw/changelog.txt
+++ b/android/libraries/TweetLanesCore/res/raw/changelog.txt
@@ -33,6 +33,7 @@ $ 1.2.0
   * Show inline images from retweets
   * DM notifications load into DM lane
   * Retweets of Retweets now correctly stay marked as such
+  * Correct handling of media URLs if the domain contains upper case characters
 $ 1.1.4
   % Version 1.1.4 (Calm after the blackout edition)
   _ 2013-06-22
