Correct some variable scope

--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -27,7 +27,7 @@
         <a href="https://plus.google.com/117064558166627683075/posts">AOSP</a>, Copyright 2008-2013,
         Android Open Source Project.\n<a href="https://github.com/jasonpolites/gesture-imageview">
             GestureImageView</a>, Copyright 2012 Jason Polites.\n
-        <a href="https://github.com/DHuckaby/Prime">Prime</a>, Copyright (C) 2012 Daniel Huckaby.\n
+        <a href="https://github.com/DHuckaby/Prime">Prime</a>, Copyright 2012 Daniel Huckaby.\n
         <a href="https://github.com/koush/UrlImageViewHelper">UrlImageViewHelper</a>, Copyright 2013
         Koushik Dutta.\n<a href="https://github.com/JakeWharton/Android-ViewPagerIndicator">
             ViewPagerIndicator</a>, Copyright 2012 Jake Wharton.\n
