--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -174,6 +174,7 @@
     <string name="tweet_posted_error">Failed to post status</string>
     <string name="posting_tweet">Posting</string>
     <string name="posting_tweet_ongoing">Posting &#8230;</string>
+    <string name="lost_position">The position on the feed has been lost</string>
 
     <string name="share_tweet">Tweet Text</string>
     <string name="share_tweet_link">Link to Tweet</string>
