Finish off work on #217 with glowing buttons & toasts on main timelines

--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -238,6 +238,7 @@
     <string name="favorited_successfully">Favorited successfully</string>
     <string name="unfavorited_successfully">Unfavorited successfully</string>
     <string name="favorited_un_successfully">Favorited failed</string>
+    <string name="favorite_in_progress">Favorite being marked</string>
     <string name="unfavorited_un_successfully">Unfavorited failed</string>
     <string name="favorite_marking_un_successful">Unable to change Favorite marker</string>
     <string name="retweeted_successfully">Retweeted successfully</string>
