Fix for #246 added absolute time, also added mixed mode which uses relative for last 59 minutes, and then absolute if over 59 minutes

--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -437,6 +437,9 @@
     <string name="title_customizelanes_preference">Customize Lanes</string>
     <string name="summary_customizelanes_preference">Show/hide specific lanes</string>
 
+    <string name="title_diplaytime_preference">Time Format/Display</string>
+    <string name="dialog_title_diplaytime_preference">Time Format/Display</string>
+
     <string name="title_statussize_preference">Font Size</string>
     <string name="dialog_title_statussize_preference">Font Size</string>
 
