--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -229,6 +229,10 @@
     </string>
 
     <string name="alert_customize_lanes_title">Customize Lanes</string>
+    <string name="alert_remove_account_title">Remove Account</string>
+    <string name="alert_remove_account_sure">Are you sure you want to remove this account?</string>
+    <string name="alert_remove_account_active">You cannot remove the active account</string>
+
 
     <string name="functionality_not_implemented">Sorry, but this feature isn\'t ready just yet.
         It\'s coming very soon though, I promise!
@@ -437,6 +441,9 @@
 
     <string name="title_customizelanes_preference">Customize Lanes</string>
     <string name="summary_customizelanes_preference">Show/hide specific lanes</string>
+
+    <string name="title_removeaccount_preference">Remove Account</string>
+    <string name="summary_removeaccount_preference">Choose &amp; Remove An Account</string>
 
     <string name="title_diplaytime_preference">Time Format/Display</string>
     <string name="dialog_title_diplaytime_preference">Time Format/Display</string>
