--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -250,6 +250,13 @@
     <string name="retweeted_marking_un_successful">Unable to mark as Retweet</string>
     <string name="cannot_unretweet">Cannot un-reweet using this app</string>
 
+    <string name="deleted_dm_successfully">Direct message deleted successfully</string>
+    <string name="deleted_dm_un_successfully">Direct message delete failed</string>
+    <string name="alert_delete_dm_title">Multiple direct message delete</string>
+    <string name="alert_delete_dm_message">You are about to delete more than one message which may take some time to process, are you sure?</string>
+    <string name="delete_dm_processing">Direct message delete in progress</string>
+    <string name="delete_dm_cancelled">Direct message delete cancelled</string>
+
     <string name="retweet">Retweet</string>
     <string name="quote">Quote</string>
     <string name="ok">OK</string>
