--- a/android/libraries/TweetLanesCore/res/values-ru/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values-ru/strings.xml
@@ -430,6 +430,9 @@
     <string name="title_profileimagesize_preference">Размер изображения профиля</string>
     <string name="dialog_title_profileimagesize_preference">Размер изображения профиля</string>
 
+    <string name="title_displayname_preference">Дисплей Название Формат</string>
+    <string name="dialog_title_displayname_preference">Дисплей Название Формат</string>
+
     <string name="title_namedisplay_preference">Формат отображения имени</string>
     <string name="dialog_title_namedisplay_preference">Формат отображения имени</string>
 
