--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -450,6 +450,9 @@
     <string name="title_profileimagesize_preference">Profile Image Size</string>
     <string name="dialog_title_profileimagesize_preference">Profile Image Size</string>
 
+    <string name="title_displayname_preference">Display Name Format</string>
+    <string name="dialog_title_displayname_preference">Display Name Format</string>
+
     <string name="title_namedisplay_preference">Name Display Format</string>
     <string name="dialog_title_namedisplay_preference">Name Display Format</string>
 
