Fix for #312 & #6 Larger and no inline image previews

--- a/android/libraries/TweetLanesCore/res/values-ru/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values-ru/strings.xml
@@ -430,8 +430,11 @@
     <string name="title_profileimagesize_preference">Размер изображения профиля</string>
     <string name="dialog_title_profileimagesize_preference">Размер изображения профиля</string>
 
-    <string name="title_displayname_preference">Дисплей Название Формат</string>
-    <string name="dialog_title_displayname_preference">Дисплей Название Формат</string>
+    <string name="title_mediaimagesize_preference">Дисплей Название Формат</string>
+    <string name="dialog_title_mediaimagesize_preference">Дисплей Название Формат</string>
+
+    <string name="title_displaymedia_preference">Дисплей Размер Media</string>
+    <string name="dialog_title_displaymedia_preference">Дисплей Размер Media</string>
 
     <string name="title_namedisplay_preference">Формат отображения имени</string>
     <string name="dialog_title_namedisplay_preference">Формат отображения имени</string>
